[package]
name = "rtjam_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
byteorder = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
tungstenite = "0.16.0"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1.0.78"
url = "2.2.2"
jack = "0.11.3"
simple-error = "0.2.3"

[build-dependencies]
vergen = "7.5.0"
anyhow = "1.0.68"
