[package]
name = "rtjam_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
byteorder = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
tungstenite = "0.16.0"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1.0.78"
url = "2.2.2"
jack = "0.11.3"
simple-error = "0.2.3"
num-derive = "0.3.3"
num = "0.4.0"
num-traits = "0.2.15"
rustfft = "6.1.0"
mac_address = "1.1.4"
socket2 = "0.5.1"
rand = "0.8.5"

[build-dependencies]
vergen = "7.5.0"
anyhow = "1.0.68"


[profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
