[package]
name = "rtjam_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
json = "*"
byteorder = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
tungstenite = "0.16.0"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1.0.78"
url = "2.2.2"
alsa = "0.9.1"
jack = "0.11.3"
simple-error = "0.2.3"
num-derive = "0.4.2"
num = "0.4.0"
num-traits = "0.2.15"
rustfft = "6.1.0"
mac_address = "1.1.4"
socket2 = "0.5.1"
rand = "0.8.5"
chrono = "0.4.24"
log = "0.4.20"
env_logger = "0.11.5"
clap = { version = "4.5.17", features = ["derive"] }
hound = "3.5.1"
csv = "1.3.0"
wmidi = "4.0.10"
rppal = "0.19.0"
thread-priority = "1.1.0"
regex = "1.10.2"
dasp_signal = "0.11.0"
dasp_sample = "0.11.0"

[build-dependencies]
vergen = "7.5.0"
anyhow = "1.0.68"

[dev-dependencies]
#ctor = "0.2.6"
mockall = "0.11"
once_cell = "1.18"
#tempfile = "3.2"
#testing_logger = "0.1.1"

[profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
